argocd/helm-argo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
