argocd/ingress.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: TLSOption
# metadata:
#   name: default
#   namespace: default
# spec:
#   minVersion: VersionTLS12
#   cipherSuites:
#     - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384   # TLS 1.2
#     - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305    # TLS 1.2
#     - TLS_AES_256_GCM_SHA384                  # TLS 1.3
#     - TLS_CHACHA20_POLY1305_SHA256            # TLS 1.3
#   curvePreferences:
#     - CurveP521
#     - CurveP384
#   sniStrict: true
# ---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  routes:
    - kind: Rule
      match: Host(`thesis.iulia.live`)
      priority: 10
      services:
        - name: argo-argocd-server
          port: 80
    - kind: Rule
      match: Host(`thesis.iulia.live`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argo-argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: le
